# football_quant_base

./: .gitignore  environment.yml  main.py  pyproject.toml  readme.md  test_notebook.ipynb
src/quant_football/backtesting/: __init__.py  backtester.py  pipelines.py
src/quant_football/core/: config.py
src/quant_football/data/: data_loader.py  preprocessor.py
src/quant_football/features/: odds_features.py
src/quant_football/modelling/: __init__.py  base_model.py  bayesian_poisson_glmm.py
src/quant_football/strategy/: __init__.py  base_strategy.py  flat_staking.py  kelly_staking.py
src/quant_football/utils/: logger.py
tests/: test_backtesting.py  test_data_ingestion.py  test_features.py  test_modelling.py  test_strategy.py
